--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <!-- Primary Meta Tags -->
 
 <meta name="title" content="LEMONWARES" />
@@ -11,14 +12,14 @@
 <meta property="og:url" content="https://metatags.io/" />
 <meta property="og:title" content="LEMONWARES" />
 <meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://thumbs2.imgbox.com/7a/db/vap3y3P6_t.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://metatags.io/" />
 <meta property="twitter:title" content="LEMONWARES" />
 <meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://thumbs2.imgbox.com/7a/db/vap3y3P6_t.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
     <meta charset="utf-8" />
